helm/applications/gateway-application/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gateway-network-policy
  namespace: gateway
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: gateway-application
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: frontend
      ports:
        - protocol: TCP
          port: 8080
    - from:
        - ipBlock:
            cidr: 192.168.0.0/16
      ports:
        - protocol: TCP
          port: 8080
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              name: config
        - namespaceSelector:
            matchLabels:
              name: fys
        - namespaceSelector:
            matchLabels:
              name: stok
      ports:
        - protocol: TCP
          port: 8080
